<?xml version="1.0"?>
<package format="2">
  <name>orca_demos</name>
  <version>1.0.0</version>
  <description>The orca_demos package</description>

  <maintainer email="info@fuzzylogicrobotics.com">Fuzzy Logic Robtics</maintainer>


  <license>CeCILL-C</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>orca</depend>


</package>
